{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 276,
  "lineage": "8bb8c310-c07d-a5f1-a60c-ad003d52fe16",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "e-learning-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b7dcad3ee1479333",
            "domain": "vpc",
            "id": "eipalloc-0b7dcad3ee1479333",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-13-41-180-81.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.41.180.81",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "e-learning-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:internet-gateway/igw-0ddba95fb9a1233aa",
            "id": "igw-0ddba95fb9a1233aa",
            "owner_id": "492367642859",
            "tags": {
              "Name": "e-learning-igw-dev"
            },
            "tags_all": {
              "Name": "e-learning-igw-dev"
            },
            "vpc_id": "vpc-0a027ac850731d4ce"
          },
          "dependencies": [
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "e-learning-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:loadbalancer/app/e-learning-alb/8b31a6f0a302f4df",
            "arn_suffix": "app/e-learning-alb/8b31a6f0a302f4df",
            "desync_mitigation_mode": "defensive",
            "dns_name": "e-learning-alb-1589866805.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:loadbalancer/app/e-learning-alb/8b31a6f0a302f4df",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "e-learning-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07886f9fbc04761ee"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-000db6818021fa9ce"
              },
              {
                "subnet_id": "subnet-08f21db1c7753e1ac"
              }
            ],
            "subnets": [
              "subnet-000db6818021fa9ce",
              "subnet-08f21db1c7753e1ac"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0a027ac850731d4ce",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.e-learning-alb-sg",
            "aws_subnet.e-learning-pub-sub1",
            "aws_subnet.e-learning-pub-sub2",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "e-learning-alb-http-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:listener/app/e-learning-alb/8b31a6f0a302f4df/9ae7533bcc929b56",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:listener/app/e-learning-alb/8b31a6f0a302f4df/9ae7533bcc929b56",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:loadbalancer/app/e-learning-alb/8b31a6f0a302f4df",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.e-learning-alb",
            "aws_security_group.e-learning-alb-sg",
            "aws_subnet.e-learning-pub-sub1",
            "aws_subnet.e-learning-pub-sub2",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "e-learning-alb-https-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:listener/app/e-learning-alb/8b31a6f0a302f4df/3365a1c3c7868e51",
            "certificate_arn": "arn:aws:acm:eu-west-2:492367642859:certificate/4d8c6f60-0c23-4ecd-bc17-a3e92594c6c3",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:targetgroup/e-learning-alb-tg/c528e0df8db6ae00",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:listener/app/e-learning-alb/8b31a6f0a302f4df/3365a1c3c7868e51",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:loadbalancer/app/e-learning-alb/8b31a6f0a302f4df",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.ecs-acm-cert",
            "aws_lb.e-learning-alb",
            "aws_lb_target_group.e-learning-alb-tg",
            "aws_security_group.e-learning-alb-sg",
            "aws_subnet.e-learning-pub-sub1",
            "aws_subnet.e-learning-pub-sub2",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "e-learning-alb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:targetgroup/e-learning-alb-tg/c528e0df8db6ae00",
            "arn_suffix": "targetgroup/e-learning-alb-tg/c528e0df8db6ae00",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:targetgroup/e-learning-alb-tg/c528e0df8db6ae00",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "e-learning-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a027ac850731d4ce"
          },
          "dependencies": [
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "e-learning-ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b7dcad3ee1479333",
            "connectivity_type": "public",
            "id": "nat-0d7cd3b83c6d19876",
            "network_interface_id": "eni-0b786f8f92e791141",
            "private_ip": "10.0.10.161",
            "public_ip": "13.41.180.81",
            "subnet_id": "subnet-000db6818021fa9ce",
            "tags": {
              "Name": "gw NAT-dev"
            },
            "tags_all": {
              "Name": "gw NAT-dev"
            }
          },
          "dependencies": [
            "aws_eip.e-learning-eip",
            "aws_internet_gateway.e-learning-igw",
            "aws_subnet.e-learning-pub-sub1",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "e-learning-priv-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:route-table/rtb-01fba1155ec5fd573",
            "id": "rtb-01fba1155ec5fd573",
            "owner_id": "492367642859",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d7cd3b83c6d19876",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "example"
            },
            "tags_all": {
              "Name": "example"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a027ac850731d4ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.e-learning-eip",
            "aws_internet_gateway.e-learning-igw",
            "aws_nat_gateway.e-learning-ngw",
            "aws_subnet.e-learning-pub-sub1",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "e-learning-pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:route-table/rtb-0de37bf548d1feedf",
            "id": "rtb-0de37bf548d1feedf",
            "owner_id": "492367642859",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ddba95fb9a1233aa",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "example"
            },
            "tags_all": {
              "Name": "example"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a027ac850731d4ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.e-learning-igw",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "e-learning-priv1-asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07dee2993654d6276",
            "route_table_id": "rtb-01fba1155ec5fd573",
            "subnet_id": "subnet-0347468b4604e82a9"
          },
          "dependencies": [
            "aws_eip.e-learning-eip",
            "aws_internet_gateway.e-learning-igw",
            "aws_nat_gateway.e-learning-ngw",
            "aws_route_table.e-learning-priv-rt",
            "aws_subnet.e-learning-priv-sub1",
            "aws_subnet.e-learning-pub-sub1",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "e-learning-priv2-asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b61f60f585468be3",
            "route_table_id": "rtb-01fba1155ec5fd573",
            "subnet_id": "subnet-08b3b1a8e727d29b6"
          },
          "dependencies": [
            "aws_eip.e-learning-eip",
            "aws_internet_gateway.e-learning-igw",
            "aws_nat_gateway.e-learning-ngw",
            "aws_route_table.e-learning-priv-rt",
            "aws_subnet.e-learning-priv-sub2",
            "aws_subnet.e-learning-pub-sub1",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "e-learning-pub1-asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0087e6639551d6d51",
            "route_table_id": "rtb-0de37bf548d1feedf",
            "subnet_id": "subnet-000db6818021fa9ce"
          },
          "dependencies": [
            "aws_internet_gateway.e-learning-igw",
            "aws_route_table.e-learning-pub-rt",
            "aws_subnet.e-learning-pub-sub1",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "e-learning-pub2-asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0d15942479f7511",
            "route_table_id": "rtb-0de37bf548d1feedf",
            "subnet_id": "subnet-08f21db1c7753e1ac"
          },
          "dependencies": [
            "aws_internet_gateway.e-learning-igw",
            "aws_route_table.e-learning-pub-rt",
            "aws_subnet.e-learning-pub-sub2",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "e-learning-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:security-group/sg-07886f9fbc04761ee",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07886f9fbc04761ee",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_tls_http",
            "name_prefix": "",
            "owner_id": "492367642859",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls_http-dev"
            },
            "tags_all": {
              "Name": "allow_tls_http-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a027ac850731d4ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "e-learning-ecs-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:security-group/sg-038dec5fa7da25f6b",
            "description": "Allow TCP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-038dec5fa7da25f6b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "TCP from alb",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07886f9fbc04761ee"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "e-learning-ecs-sg",
            "name_prefix": "",
            "owner_id": "492367642859",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "e-learning-ecs-sg-dev"
            },
            "tags_all": {
              "Name": "e-learning-ecs-sg-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a027ac850731d4ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.e-learning-alb-sg",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "postgresql-rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:security-group/sg-0deef1a67d36605ee",
            "description": "Allows traffic only on port 5432 with ecs cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0deef1a67d36605ee",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "ecs security group to db",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-038dec5fa7da25f6b"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "postgresql-rds-sg",
            "name_prefix": "",
            "owner_id": "492367642859",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-instance-sec-group-dev"
            },
            "tags_all": {
              "Name": "db-instance-sec-group-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a027ac850731d4ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.e-learning-alb-sg",
            "aws_security_group.e-learning-ecs-sg",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "e-learning-priv-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:subnet/subnet-0347468b4604e82a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0347468b4604e82a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "492367642859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "e-learning-priv-sub1-dev"
            },
            "tags_all": {
              "Name": "e-learning-priv-sub1-dev"
            },
            "vpc_id": "vpc-0a027ac850731d4ce"
          },
          "dependencies": [
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "e-learning-priv-sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:subnet/subnet-08b3b1a8e727d29b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b3b1a8e727d29b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "492367642859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "e-learning-priv-sub2-dev"
            },
            "tags_all": {
              "Name": "e-learning-priv-sub2-dev"
            },
            "vpc_id": "vpc-0a027ac850731d4ce"
          },
          "dependencies": [
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "e-learning-pub-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:subnet/subnet-000db6818021fa9ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-000db6818021fa9ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "492367642859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "e-learning-pub-sub1-dev"
            },
            "tags_all": {
              "Name": "e-learning-pub-sub1-dev"
            },
            "vpc_id": "vpc-0a027ac850731d4ce"
          },
          "dependencies": [
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "e-learning-pub-sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:subnet/subnet-08f21db1c7753e1ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f21db1c7753e1ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "492367642859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "e-learning-pub-sub2-dev"
            },
            "tags_all": {
              "Name": "e-learning-pub-sub2-dev"
            },
            "vpc_id": "vpc-0a027ac850731d4ce"
          },
          "dependencies": [
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "e-learning",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:vpc/vpc-0a027ac850731d4ce",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-072e6818ea52807fc",
            "default_route_table_id": "rtb-0e0534f53de33f47b",
            "default_security_group_id": "sg-0b04ea1372fec0649",
            "dhcp_options_id": "dopt-07de7887fa266f1ce",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a027ac850731d4ce",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e0534f53de33f47b",
            "owner_id": "492367642859",
            "tags": {
              "Name": "e-learning-dev"
            },
            "tags_all": {
              "Name": "e-learning-dev"
            }
          }
        }
      ]
    }
  ]
}